<?xml version="1.0"?>
<package>
  <name>speech_recognition</name>
  <version>0.0.1</version>
  <description>The speech_recognition package</description>

  <maintainer email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</maintainer>

  <license>MIT</license>

  <author email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospeex_core</build_depend>
  <build_depend>rospeex_if</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>speech_recognition_msgs</build_depend>
  <build_depend>audio_capture</build_depend>
  <build_depend>audio_common_msgs</build_depend>
  <run_depend>rospeex_core</run_depend>
  <run_depend>rospeex_if</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>speech_recognition_msgs</run_depend>
  <run_depend>audio_capture</run_depend>
  <run_depend>audio_common_msgs</run_depend>

  <export>
  </export>
</package>
